# textract

./: .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: changelog.rst
requirements/: python  python-dev3
tests/: Dockerfile  run_docker_tests.sh
textract/: colors.py
textract/parsers/: pdf_parser.py
