[tool.poetry]
name = "textract"
version = "0.1.0"
description = ""
authors = ["Steven Leong <howsenpl@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nose = "^1.3.7"
pycodestyle = "^2.12.1"
pyyaml = "^6.0.2"
pytest = "^8.3.3"
requests = "^2.32.3"
bumpversion = "^0.6.0"
pip = "^24.3.1"
argcomplete = "^3.5.1"
beautifulsoup4 = "^4.12.3"
chardet = "^5.2.0"
docx2txt = "^0.8"
extract-msg = "^0.52.0"
sphinx = "^8.1.3"
pdfminer-six = "^20240706"
python-pptx = "^1.0.2"
six = "^1.16.0"
speechrecognition = "^3.11.0"
xlrd = "^2.0.1"
sphinx-rtd-theme = "^3.0.1"
sphinx-argparse = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
